--- a/HomeworkAssignment1.csproj
+++ b/HomeworkAssignment1.csproj
@@ -190,6 +190,8 @@
     <Content Include="Views\Booking\ManagePage.cshtml" />
     <Content Include="Views\Booking\AddDriver.cshtml" />
     <Content Include="Views\Booking\EditDriver.cshtml" />
+    <Content Include="Views\Booking\AddVehicle.cshtml" />
+    <Content Include="Views\Booking\EditVehicle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
