--- a/HomeworkAssignment1.csproj
+++ b/HomeworkAssignment1.csproj
@@ -149,6 +149,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\Confirm.css" />
     <Content Include="Content\HomeStyle.css" />
     <Content Include="Content\Manage.css" />
     <Content Include="favicon.ico" />
